WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270367
PresentationContextIOSurface::present should do nothing if there is no compute pipeline state
https://bugs.webkit.org/show_bug.cgi?id=270367
Summary
PresentationContextIOSurface::present should do nothing if there is no comput...
Alex Christensen
Reported
2024-03-01 11:58:06 PST
rdar://123912101
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2024-03-01 11:59:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25357
EWS
Comment 2
2024-03-01 16:45:52 PST
Committed
275582@main
(85712d7f2f19): <
https://commits.webkit.org/275582@main
> Reviewed commits have been landed. Closing PR #25357 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug