PresentationContextIOSurface::present should do nothing if there is no compute pipeline state https://bugs.webkit.org/show_bug.cgi?id=270367 rdar://123912101

Reviewed by Mike Wyrzykowski.

There is nothing to do if there is no compute pipeline, but we don't want to dereference null.

* LayoutTests/fast/webgpu/present-without-compute-pipeline-expected.txt: Added.
* LayoutTests/fast/webgpu/present-without-compute-pipeline.html: Added.
* Source/WebGPU/WebGPU/PresentationContextIOSurface.mm:

Canonical link: https://commits.webkit.org/275582@main