Source/WebGPU/WebGPU/PresentationContextIOSurface.mm
@@ -202,7 +202,7 @@ void PresentationContextIOSurface::present()
 {
     ASSERT(m_ioSurfaces.count == m_renderBuffers.size());
     auto& textureRefPtr = m_renderBuffers[m_currentIndex].luminanceClampTexture;
-    if (Texture* texturePtr = textureRefPtr.get()) {
+    if (Texture* texturePtr = textureRefPtr.get(); texturePtr && m_computePipelineState) {
         MTLCommandBufferDescriptor *descriptor = [MTLCommandBufferDescriptor new];
         descriptor.errorOptions = MTLCommandBufferErrorOptionEncoderExecutionStatus;
         id<MTLCommandBuffer> commandBuffer = m_device->getQueue().commandBufferWithDescriptor(descriptor);
